# CPyCppyy

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
doc/source/: conf.py  cppyy_features_header.rst  distribution.rst  features.rst  index.rst  installation.rst
include/: TPyArg.h  TPyException.h  TPyReturn.h  TPython.h
include/CPyCppyy/: API.h  CommonDefs.h  DispatchPtr.h  PyException.h  PyResult.h  Reflex.h  TPyArg.h  TPyException.h  TPyReturn.h
python/: cppyy.py
python/cppyy/: __init__.py
src/: API.cxx  CPPClassMethod.cxx  CPPClassMethod.h  CPPConstructor.cxx  CPPConstructor.h  CPPDataMember.cxx  CPPDataMember.h  CPPEnum.cxx  CPPExcInstance.cxx  CPPExcInstance.h  CPPFunction.cxx  CPPFunction.h  CPPInstance.cxx  CPPInstance.h  CPPMethod.cxx  CPPMethod.h  CPPOperator.cxx  CPPOperator.h  CPPOverload.cxx  CPPOverload.h  CPPScope.cxx  CPPScope.h  CPPSetItem.cxx  CPPSetItem.h  CPyCppyy.h  CPyCppyyHelpers.cxx  CPyCppyyHelpers.h  CPyCppyyModule.cxx  CPyCppyyType.cxx  CPyCppyyType.h  CallContext.cxx  CallContext.h  Converters.cxx  Converters.h  Cppyy.cxx  Cppyy.h  CustomPyTypes.cxx  CustomPyTypes.h  DeclareConverters.h  DeclareExecutors.h  (+58 more)
test/: feature_doc_test.py  test_advancedcpp.py  test_datatypes.py  test_fragile.py  test_overloads.py  test_pythonify.py  test_stltypes.py
